--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Redox Ahmii",
   "license": "ISC",
   "dependencies": {
-    "json-to-ts": "^1.7.0"
+    "json-to-ts": "^1.7.0",
+    "quicktype-core": "^23.0.116"
   }
 }
