--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "json-to-ts.nvim",
+  "name": "json-to-types.nvim",
   "version": "1.0.0",
   "description": "A plugin to convert JSON objects to typescript types",
   "main": "index.js",
@@ -14,6 +14,8 @@
   "author": "Redox Ahmii",
   "license": "ISC",
   "dependencies": {
-    "json-to-ts": "^1.7.0"
+    "json-to-ts": "^1.7.0",
+    "quicktype": "^23.0.168",
+    "quicktype-core": "^23.0.168"
   }
 }
